# centrifuge-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  client.proto  docker-compose.yml  example.py  example_async_await.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
centrifuge/: __init__.py  client.py  codecs.py  codes.py  contexts.py  exceptions.py  filter.py  fossil.py  handlers.py  types.py  utils.py
centrifuge-python/: client.py
centrifuge/protocol/: client_pb2.py
tests/: fake_server.py  test_client.py  test_filter.py  test_fossil.py  test_state_invalidation.py
