[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centrifuge-python"
description = "WebSocket SDK for Centrifugo (and any Centrifuge-based server) on top of Python asyncio library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Alexander Emelin (Centrifugal Labs LTD)", email = "" },
]
keywords = [
    "Centrifugo",
    "Centrifuge",
    "WebSocket",
    "Pub/Sub",
    "Realtime",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Framework :: AsyncIO",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=11.0.3,<12.0.0",
    "protobuf>=4.23.4,<5.0.0",
]

dynamic = ["version"]

[tool.hatch.build.targets.wheel]
packages = [{ include = "centrifuge" }]